# papertime

./: .gitattributes  .gitignore  .mise.toml  DARWIN_RESEARCH.md  README.md  SPECIFICATION.md  STATION_ARCHITECTURE.md  SUMMARY.md  fix-static.sh  fix_station_index.py  mise.toml  package-lock.json  package.json  playwright.config.ts  render.yaml  svelte.config.js
darwin2data/: .env.example  .gitignore  Cargo.toml
darwin2data/src/: feed.rs  main.rs  marey.rs  parse.rs  patterns.rs  route_index.rs  stations.rs  table_index.rs  types.rs
e2e/: smoke.spec.ts
pdf-test/: Cargo.toml
pdf-test/src/: main.rs
pdf2data/: Cargo.toml  clean_services.py  compute_marey.py  fix_data.py  merge_a_tables.py  parse_m1.py  parse_timetables.py  test_table002.py  validate_cif.py
pdf2data/backups/: 002.json  003.json  008.json  010.json  011.json  014.json  020.json  023.json  024.json  025.json  026.json  029.json  031.json  032.json  033.json  034.json  036.json  038.json  039.json  041.json  053.json  054.json  056.json  061.json  063.json  065.json  066.json  067.json  068.json  078.json  082.json  083.json  085.json  090.json  092.json  093.json  098.json  099.json  102.json  106.json  (+37 more)
playwright-report/: index.html
scripts/: build-crstotiploc.js  build-index.js  find-tiploc-mapping.js  fix-crs-codes.js  fix_homepage.sh  generate-patterns.js  generate_naptan_cache.py  optimize-data.js  regen-marey.py
src/: app.html
static/: naptan-cache.json  route-index.json  station-index-test.json  station-index.json  stations.json  table-index.json  tiploc_to_name.json
(+18071 files in other folders)
