[package]
name = "darwin2data"
version = "0.1.0"
edition = "2024"

[dependencies]
# HTTP client
reqwest = { version = "0.12", features = ["blocking"] }

# ZIP extraction (not used for Darwin S3, but kept for compatibility)
zip = "2"

# Gzip decompression for Darwin XML files
flate2 = "1"

# XML parsing
quick-xml = "0.37"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"

# Date/time parsing
chrono = "0.4"

# Environment variables
dotenvy = "0.15"

# Logging
env_logger = "0.11"
log = "0.4"

# AWS S3 with proper SigV4 authentication
aws-config = "1"
aws-sdk-s3 = { version = "1", features = ["behavior-version-latest"] }
aws-credential-types = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
bytes = "1"

[features]
default = ["aws"]
aws = []
